Fix bootstrap bug in radar theme

--- a/tests/demo.html
+++ b/tests/demo.html
@@ -1,6 +1,7 @@
 <head>
-  <link rel="stylesheet" href="../themes/pace-theme-barber-shop.css" />
-
+  <link rel="stylesheet" href="../themes/pace-theme-center-radar.css" />
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <script>
     paceOptions = {
       elements: true
